change color the body

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -88,7 +88,7 @@ body {
   font-weight: normal;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: rgba(0,0,0,.5);
 }
 
 [tabindex="-1"]:focus {
@@ -393,7 +393,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
-  color: inherit;
+  color:rgba(218,165,65,1);
 }
 
 h1, .h1 {
