--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
+html, body{
+	background-color: black;
+}
 body {
 	font: bold 11px/1.5em Verdana;
-	background: black;
 	}
 
-h1 {
+h1{
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:16px;
 	font-weight:bold;
@@ -17,7 +19,13 @@ hr {
 	height:1px;
 	margin-bottom:25px;
 	}
-
+p{
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size:16px;
+	color: white;
+	margin:0;
+	padding: 0;
+}
 .tabs {
 	float:right;
 	width:100%;
@@ -81,15 +89,15 @@ hr {
 	margin-left:10%;
 }
 .blg{
-	border: 3px solid gold;
+	border: 3px solid rgba(218,165,32,1);
 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
-	box-shadow: inset 0 0 0.5em black, 0 0 0.8em gold;
+	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
 }
 .blg h5{
 	color:rgba(218,165,32,0.8);
 	font-weight: bold;
 	font-size: 1em;
-	margin-top:  5px;
+	margin-top:  15px;
 }
 .to1{
 	margin-top: 45px;
