--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,6 @@ p{
 .tabs {
 	float:right;
 	width:100%;
-/*	background:#EDF7E7;*/
 	font-size:93%;
 	line-height:normal;
 	}
@@ -48,7 +47,7 @@ p{
 
 .tabs a {
 	float:right;
-/*	background:url("../image.png") no-repeat left top;*/
+
 	margin:0;
 	padding:0 0 0 4px;
 	text-decoration:none;
@@ -57,7 +56,7 @@ p{
 .tabs a span {
 	float:right;
 	display:block;
-	background:url("../imagegold.png") no-repeat right top;
+	background:url("../images/imagegold.png") no-repeat right top;
 	padding:5px 15px 4px 6px;
 	color:#464E42;
 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
@@ -79,6 +78,7 @@ p{
 .tabs a:hover span {
 	background-position:100% -42px;
 	}
+
 .cent{
 	margin-left: 20%;
 	margin-top: 100px;
@@ -88,17 +88,111 @@ p{
 .cent h2{
 	margin-left:10%;
 }
+
+.to1{
+	margin-top: 45px;
+}
+/*==============Apparition de la div tabs================*/
+
 .blg{
 	border: 3px solid rgba(218,165,32,1);
 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
 	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
 }
-.blg h5{
+#blg1{
+	width: 344px;
+	height: 536px;
+	opacity: 0;
+	margin-top: -335px;
+
+}
+#blg2{
+	width: 344px;
+	height: 536px;
+	opacity: 0;
+	margin-top: -370px;
+
+}
+#blg3{
+	width: 344px;
+	height: 536px;
+	opacity: 0;
+	margin-top: -383px;
+
+}
+.blg img{
+	margin-left: 35px;
+	margin-top:65px;
+	border: 3px solid rgba(218,165,32,1);
+	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
+}
+.blg h5, .bl1 h5{
 	color:rgba(218,165,32,0.8);
 	font-weight: bold;
 	font-size: 1em;
-	margin-top:  15px;
+	margin-top:  65px;
 }
-.to1{
-	margin-top: 45px;
+.blg:hover #blg1{
+	animation-duration: 3s;
+  animation-name: blg1 ;
+  animation-iteration-count:1;
+  animation-direction: alternate;
+	position: absolute;
+	opacity: 1;
+	background-color: white;
+	border: 0.5px solid rgba(218,165,32,1);
+	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+}
+@keyframes blg1 {
+	from{
+			margin-top: 	0%;
+
+		}
+	to{
+			margin-top: -335px;
+
+	}
+}
+.blg:hover #blg2{
+	animation-duration: 3s;
+	animation-name: blg2 ;
+	animation-iteration-count:1;
+	animation-direction: alternate;
+	position: absolute;
+	opacity: 1;
+	background-color: white;
+	border: 0.5px solid rgba(218,165,32,1);
+	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+}
+@keyframes blg2 {
+	from{
+			margin-top: 	0%;
+
+		}
+	to{
+			margin-top: -370px;
+
+	}
+}
+.blg:hover #blg3{
+	animation-duration: 3s;
+	animation-name: blg3 ;
+	animation-iteration-count:1;
+	animation-direction: alternate;
+	position: absolute;
+	opacity: 1;
+	background-color: white;
+	border: 0.5px solid rgba(218,165,32,1);
+	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+}
+@keyframes blg3 {
+	from{
+			margin-top: 	0%;
+
+		}
+	to{
+			margin-top: -383px;
+
+	}
 }
