--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -389,15 +389,15 @@ template {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5px;
   font-family: inherit;
-  font-weight: 500;
+  font-weight: 100;
   line-height: 1.1;
   color:rgba(218,165,65,1);
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
+  font-size: 37px;
 }
 
 h2, .h2 {
@@ -2554,8 +2554,10 @@ tbody.collapse.show {
 }
 
 .dropup .dropdown-menu {
-  margin-top: 0;
+  margin-top: -10px;
   margin-bottom: 0.125rem;
+  float: left;
+
 }
 
 .dropup .dropdown-toggle::after {
