--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html, body{
 	background-color: black;
 }
 body {
-	font: bold 11px/1.5em Verdana;
+	/*font: bold 11px/1.5em Verdana;*/
 	}
 
 h1{
@@ -13,12 +13,6 @@ h1{
 	padding:0;
 	}
 
-hr {
-	border:none;
-	border-top:1px solid #CCCCCC;
-	height:1px;
-	margin-bottom:25px;
-	}
 p{
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:16px;
@@ -28,7 +22,7 @@ p{
 }
 .tabs {
 	float:right;
-	width:100%;
+	width:70%;
 	font-size:93%;
 	line-height:normal;
 	}
@@ -87,6 +81,7 @@ p{
 }
 .cent h2{
 	margin-left:10%;
+	margin-bottom: 15px;
 }
 
 .to1{
@@ -103,10 +98,10 @@ p{
 	width: 344px;
 	height: 536px;
 	opacity: 0;
-	margin-top: -340px;
+	margin-top: -345px;
 	padding: 4px;
-	text-align:left;
-	vertical-align:middle;
+	text-align:justify;
+/*	vertical-align:middle;*/
 }
 #blg2{
 	width: 344px;
@@ -202,3 +197,224 @@ p{
 
 	}
 }
+/*======================dropdown============*/
+.dropdown{
+	visibility: hidden;
+}
+.dropbtn {
+    background-color: rgb(218,165,32);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color:rgb(218,165,32);
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+		margin-left: 15px;
+		margin-top: 15px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:white;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+		list-style: none;
+    text-decoration: none;
+    display: block;
+}
+
+
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
+/*============ css pour les mobiles================*/
+@media (min-width: 320px) and (max-width:640px) {
+	html, body{
+		background-color: black;
+	}
+	.dropdown{
+		top: -100px;
+		visibility:visible;
+		float: right;
+	}
+	.dropbtn {
+	    background-color: rgb(218,165,32);
+	    color: white;
+	    padding: 16px;
+	    font-size: 16px;
+	    border: none;
+	    cursor: pointer;
+
+	}
+
+	.dropbtn:hover, .dropbtn:focus {
+	    background-color:rgb(218,165,32);
+	}
+
+	.dropdown {
+	    position: relative;
+	    display: inline-block;
+			margin-left: 15px;
+			margin-top: 15px;
+	}
+
+	.dropdown-content {
+	    display: none;
+	    position: absolute;
+	    background-color:white;
+	    min-width: 130px;
+	    overflow: auto;
+	    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	    z-index: 1;
+	}
+
+	.dropdown-content a {
+	    color: black;
+	    padding: 12px 16px;
+			list-style: none;
+	    text-decoration: none;
+	    display: block;
+	}
+
+
+
+	.dropdown a:hover {background-color: #f1f1f1}
+
+	.show {display:block;}
+	.tabs{
+		visibility: hidden;
+	}
+
+	 .cent h2{
+		 margin-left: 1px;
+		 margin-bottom: 16px;
+	 }
+	 .blg{
+		 position:fixed;
+	 	border: 3px solid rgba(218,165,32,1);
+	 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+	 	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
+	 }
+	 #blg1{
+		 width: 336px;
+		 height: 340px;
+		 opacity: 0;
+		 margin-top: -340px;
+		 margin-left: -8px;
+		 padding: 4px;
+		 text-align:justify;
+	 }
+	 .blg:hover #blg1{
+	 	animation-duration: 3s;
+	   animation-name: bl1 ;
+	   animation-iteration-count:1;
+	   animation-direction: alternate;
+	 	position: absolute;
+	 	opacity: 1;
+	 	background-color: white;
+	 	border: 0.5px solid rgba(218,165,32,1);
+	 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+	 }
+
+	 @keyframes bl1 {
+	 	From{
+	 			margin-top: 	0%;
+	 		}
+	 	to{
+	 			margin-top: -340px;
+	 	}
+	 }
+	 #blg2{
+	 	width: 344px;
+	 	height: 480px;
+	 	opacity: 0;
+		margin-left: -8px;
+	 	margin-top: -480px;
+	 	padding: 6px;
+	 	text-align:left;
+
+	 }
+	 #blg2 h5{
+		 margin-top:1px;
+	 }
+	 .blg:hover #blg2{
+	 	animation-duration: 3s;
+	 	animation-name: blg2 ;
+	 	animation-iteration-count:1;
+	 	animation-direction: alternate;
+	 	position: absolute;
+	 	opacity: 1;
+	 	background-color: white;
+	 	border: 0.5px solid rgba(218,165,32,1);
+	 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+	 }
+	 @keyframes blg2 {
+	 	from{
+	 			margin-top: 	0%;
+
+	 		}
+	 	to{
+	 			margin-top: -480px;
+
+	 	}
+	 }
+	 #blg3 h5{
+		 margin-top: -3px;
+	 }
+	 #blg3{
+	 	width: 344px;
+	 	height: 400px;
+	 	opacity: 0;
+		margin-left: -10px;
+	 	margin-top: -400px;
+	 	padding: 6px;
+	 	text-align:left;
+	 	vertical-align: middle;
+	 }
+	 .blg:hover #blg3{
+	 	animation-duration: 3s;
+	 	animation-name: blg3 ;
+	 	animation-iteration-count:1;
+	 	animation-direction: alternate;
+	 	position: absolute;
+	 	opacity: 1;
+	 	background-color: white;
+	 	border: 0.5px solid rgba(218,165,32,1);
+	 	border-radius: 25px 25px 25px 25px / 32px 32px 32px 32px;
+	 }
+	 @keyframes blg3 {
+	 	from{
+	 			margin-top: 	0%;
+
+	 		}
+	 	to{
+	 			margin-top: -400px;
+
+	 	}
+	 }
+	 .blg img{
+		 margin-bottom: 15px;
+	 }
+	 .blg img:nth-child(2){
+		 margin-bottom: 110px;
+	 }
+ }
