--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,11 @@ html, body{
 	overflow-x: hidden;
 }
 body {
-	/*font: bold 11px/1.5em Verdana;*/
+	/*font: bold 11px/1.5em  Arial,"Helvetica Neue",Helvetica,sans-serif;*/
 	}
 
 h1{
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
 	/*margin:0;*/
 	padding:0;
  	color:goldenrod;
@@ -22,11 +22,12 @@ h1{
 p{
 	font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
 	font-size:14px;
-	line-height: 18px;
+	line-height: 15px;
 	font-weight: normal;
 	color: rgba(0, 9, 0, 0.8);
 	margin-bottom: 18px;
-	padding: 0;
+	padding: 5px 15px 0 15px;
+	text-align: left;
 }
 /*============navbar=============*/
 .navbar{
@@ -174,30 +175,31 @@ p{
 		overflow: hidden;
 		height: 450px;
 		background-color: goldenrod;
-		border: 3px solid rgba(218,165,32,1);
-	border-radius: 5px 5px 5px 5px / 12px 12px 12px 12px;
-	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
+		border: 1px solid rgba(218,165,32,1);
+	  border-radius: 5px 5px 5px 5px / 12px 12px 12px 12px;
+	  box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
 
 	}
 	.cuadro_intro_hover:hover .caption{
 		opacity: 1;
-		transform: translateY(-473px);
-		-webkit-transform:translateY(-473px);
-		-moz-transform:translateY(-473px);
-		-ms-transform:translateY(-473px);
-		-o-transform:translateY(-473px);
+		transform: translateY(-495px);
+		-webkit-transform:translateY(-495px);
+		-moz-transform:translateY(-495px);
+		-ms-transform:translateY(-495px);
+		-o-transform:translateY(-495px);
+
 	}
 	.cuadro_intro_hover img{
 		z-index: 4;
 		margin-top: -14px;
-		border: 1px solid rgba(218,165,32,1);
+		/*border: 1px solid rgba(218,165,32,1);*/
 	border-radius: 5px 5px 5px 5px / 12px 12px 12px 12px;
 	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
 
 	}
 	.cuadro_intro_hover .caption{
 		position: absolute;
-		top:460px;
+		top:485px;
 		-webkit-transition:all 1s ease-in-out;
 		-moz-transition:all 1s ease-in-out;
 		-o-transition:all 1s ease-in-out;
@@ -206,15 +208,16 @@ p{
 		width: 100%;
 	}
 	.cuadro_intro_hover .blur{
-		background-color: rgba(255,255,255,1);
-		height: 550px;
+		height: 443px;
 		z-index: 5;
 		position: absolute;
-		width: 100%;
+		width: 98%;
+		background-color: white;
 		margin-top: 14px;
-		border: 1px ;
-	border-radius: 5px 5px 5px 5px / 12px 12px 12px 12px;
-	box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
+		margin-left: 3px;
+		border: 1px solid rgba(218,165,32,1);
+		border-radius: 5px 5px 5px 5px / 12px 12px 12px 12px;
+		box-shadow: inset 0 0 0.5em black, 0 0 0.8em rgba(218,165,32,0.4);
 	}
 	.cuadro_intro_hover .caption-text{
 		z-index: 10;
@@ -223,7 +226,7 @@ p{
 		height: 300px;
 		text-align:left;
 		top:-20px;
-		padding: 5px;
+		padding: 5px 5px 0 5px;
 		width: 100%;
 	}
 	.to1{
@@ -231,6 +234,8 @@ p{
 	}
 	/*================footer==============*/
 	.text-muted{
-		margin-left: 172px;
+		margin-left:45%;
+		font-size: 18px;
+		color: white;
 	}
 	/*================end footer=========*/
